Name:           GitBox
Version:        0.0.1
Cabal-Version:  >= 1.2
Build-Type:     Simple

library
  hs-source-dirs: core
  build-depends: 
    base >= 4 && <= 5,
    hlibgit2

executable gitboxd
  main-is: GitBoxD.hs
  build-depends: 
    base >= 4 && <= 5,
    fsnotify >= 0.0.4,
    network >= 2.3.0,
    system-filepath,
    text,
    time,
    process

executable gitbox
  main-is: GitBox.hs
  build-depends:
    base >= 4 && <= 5,
    containers,
    network >= 2.3.0


